[package]
name = "TextBlaster"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "54.3.1"
parquet = { version = "54.3.1", features = ["arrow"] }
rayon = "1.10.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
rnltk = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
icu = "1.5.0"
itertools = "0.14.0"
regex = "1.11.1"
once_cell = "1.21.3"
async-trait = "0.1.88"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }
lapin = { version = "2.5.3", features = ["native-tls"] }
indicatif = { version = "0.17", features = ["tokio"] }
axum = "0.7"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4" # Or use once_cell which is already present
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rand = "0.8" # Added rand dependency
# {{ Add dependencies needed for producer/worker (some might be added later) }}
# redis = { version = "0.25", features = ["tokio-comp"] } # Example: Redis client

# {{ Add missing lapin trait dependencies }}
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
chrono = "0.4.41"
serde_yaml = "0.9.34"
whatlang = "0.16.4"
anyhow = "1.0.98"
tokenizers = { version = "0.15.2", features = ["http"] } # Specify version and add http feature

# {{ Define the library (implicitly done by having src/lib.rs) }}
# [lib]
# path = "src/lib.rs" # Not strictly needed if using default path

# {{ Define the binaries explicitly }}
[[bin]]
name = "producer"
path = "src/bin/producer.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dev-dependencies]
tempfile = "3.19.1"
testcontainers = "0.15"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
get_port = "0.1.0"

# {{ No need for the old default main.rs binary now }}
